--- a/Aventura das Formas/index.html
+++ b/Aventura das Formas/index.html
@@ -17,36 +17,37 @@
 
             <h3>Círculo</h3>
 
-            <img src="images/circulo.png" alt="circulo">
+            <a href="circulo.html"><img src="images/circulo.png" alt="circulo"></a>
 
-            <p>É uma figura geométrica plana composta por todos os pontos a uma distância igual ou menor que r de determinado centro p.</p>
+            <p class="b">É uma figura geométrica plana composta por todos os pontos a uma distância igual ou menor que r de determinado centro p.</p>
         </div>
 
         <div class="segunda">
             <h3>Quadrado</h3>
 
-            <img src="images/quadrado.png" alt="Quadrado">
+            <a href="quadrado.html"><img src="images/quadrado.png" alt="Quadrado"></a>
 
-            <p>É uma figura plana, classificado como polígono, composto por 4 lados e 4 ângulos congruentes entre si, ou seja, que possuem as mesmas medidas.</p>
+            <p class="b">É uma figura plana, classificado como polígono, composto por 4 lados e 4 ângulos congruentes entre si, ou seja, que possuem as mesmas medidas.</p>
         </div>
 
         <div class="terceira">
 
-            <h3>Triângulo</h3>
+            <h3>Poligonos</h3>
 
-            <img src="images/triangulo.png" alt="Triângulo">
+            <a href="Poligonos.html"><img src="images/pen.png" alt="Poligono"></a>
 
-            <p>Um triângulo é um polígono que possui três lados e que necessariamente é uma figura plana cujos lados são segmentos de reta.</p>
-        </div>
+
+            <p class="b">Polígonos são figuras geométricas planas compostas por segmentos de reta que formam uma figura fechada com vértices e lados. Exemplos incluem triângulos e quadrados.</p>       
+            </div>
 
         <div>
 
             <h3>Pirâmide</h3>
 
-            <img src="images/troncodapiramide.png" alt="Pirâmide">
+            <a href="triangulo.html"><img src="images/troncodapiramide.png" alt="Pirâmide"></a>
 
-            <p>É um sólido geométrico que possui a base formada por um polígono e faces laterais triangulares que se encontram em um único ponto, conhecido como vértice.</p>
-        </div>
+            <p class="b">Um triângulo é um polígono que possui três lados e que necessariamente é uma figura plana cujos lados são segmentos de reta.</p>
+            </div>
     </main>
     <footer>
         <p class="footer"> &copy;FormasGeo.</p>
